# football_pred

./: .dockerignore  .gitignore  Agents.md  Dockerfile  README.md  XGBoost Football Match Prediction Model.md  build_features_extended.py  collect_2025.py  collect_data.py  collect_data_extended.py  collect_fast.py  collect_weekend_stats.py  explore_api.py  explore_odds.py  find_leagues.py  football_matches.csv  get_odds_nice_rennes.py  main.py  pipeline_v4_updated.py  predict_all_leagues_value_bets.py  pyproject.toml  sanitize_repo.py  test_predictions.csv  train_model.py  train_model_v2.py  train_random_forest_vs_xgboost.py  update_dataset.py  value_bets.py  xgb_football_model.json
artifacts/: xgb_football_model.pkl
dataset/: advanced_stats.csv  advanced_stats_cache.json  elo_ratings_all_teams.csv  european_fixtures_cache.json  football_matches.csv  football_matches_v4.csv  viz_findings.txt
docs/: Advanced_Stats_Impact_Report.md  European_Competitions_Impact_Report.md  XGBoost Football Match Prediction Model (v2 — Extended Dataset).md  all_leagues_value_bets_v4.md
models/: xgb_football_model_v3_europe.json  xgb_football_model_v3_europe.pkl  xgb_football_model_v4_advanced.json  xgb_football_model_v4_advanced.pkl
results/: all_leagues_value_bets_v4.csv  comparison_baseline_vs_europe.csv  comparison_v2_v3_v4.csv  feature_importance_xgb_vs_rf.csv  metrics_rps_brier_ece.csv  results_summary.json  results_summary_v4.json  test_predictions_advanced_v4.csv  test_predictions_baseline_v2.csv  test_predictions_europe_v3.csv  value_bets_summary_v4.csv  (+2 more)
(+33 files in other folders)
