[project]
name = "football-pred"
version = "0.1.0"
description = "Football match prediction with hexagonal architecture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "returns>=0.21.0",
    "fastapi>=0.116.0",
    "typer>=0.16.0",
    "uvicorn>=0.35.0",
    "pandas>=2.2.0",
    "xgboost>=2.1.0",
    "scikit-learn>=1.6.0",
]

[project.scripts]
football-pred = "football_pred.interface.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
    "black>=24.0.0",
    "mypy>=1.11.0",
    "pytest>=8.4.0",
]
